[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["log101 <frknerdm@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
pytest = "^7.1.3"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
